# shark

./: .env  .env.production  .eslintrc.cjs  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vite.config.ts
public/: manifest.json
shark_back/: .gitignore  Cargo.toml
shark_back/bindings/: SharkComment.ts  SharkPost.ts  SharkPostImage.ts
shark_back/entity/: Cargo.toml
shark_back/entity/bindings/: NewSharkImage.ts  NewSharkPost.ts  SerializedSharkPost.ts  SharkImage.ts  SharkPost.ts
shark_back/entity/src/: lib.rs  shark_comment.rs  shark_image.rs  shark_post.rs
shark_back/migration/: Cargo.toml
shark_back/migration/src/: lib.rs  m20230904_135833_init_db.rs
shark_back/src/: main.rs
shark_back/src/models/: shark_post.rs
src/: App.css  App.tsx  App.vue  app.css  index.css  main.ts  vite-env.d.ts
src/assets/: main.css
src/components/: DropZonePhoto.tsx  NewPostModal.tsx  PostImage.tsx  Scroller.tsx  UploadPhoto.tsx
src/routes/: credits.tsx  home.tsx  post.tsx  upload.tsx
src/utils/: theme.ts
