[package]
name = "shark_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
axum = { version = "0.6.18", features = ["headers", "ws", "macros"] }
num-bigint = "0.4.3"
sea-orm = "0.11.3"
ts-rs = { version = "6.2.1", features = ["chrono-impl"] }
serde = { version = "1.0.171", features = ["derive", "rc"] }
serde_json = { version = "1.0.100" }
tower-http = { version = "0.4.1", features = ["cors"] }
chrono = "0.4.26"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
