[package]
name = "shark_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.6.20", features = ["headers", "ws", "macros"] }
num-bigint = "0.4.4"
sea-orm = { version = "0.12.2", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
ts-rs = { version = "7.0.0", features = ["chrono-impl"] }
serde = { version = "1.0.171", features = ["derive", "rc"] }
serde_json = { version = "1.0.100" }
tower-http = { version = "0.4.4", features = ["cors"] }
chrono = "0.4.28"
migration = { path = "migration" }
entity = { path = "entity" }
sqlx = "0.7.1"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
